[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Images/Lifes/life-02.png" type="Texture" id=2]
[ext_resource path="res://Images/Lifes/life-01.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "full",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=2]

hinting = 2
font_path = "res://Fonts/cyrillic_pixel-7.ttf"

[sub_resource type="DynamicFont" id=3]

size = 90
use_mipmaps = false
use_filter = false
font_data = SubResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="UI" type="CanvasLayer"]

pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="first_life" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 180, 50 )
scale = Vector2( 0.25, 0.2 )
frames = SubResource( 1 )
animation = "full"
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="second_life" type="AnimatedSprite" parent="." index="1"]

position = Vector2( 120, 50 )
scale = Vector2( 0.25, 0.2 )
frames = SubResource( 1 )
animation = "full"
_sections_unfolded = [ "Transform" ]

[node name="last_life" type="AnimatedSprite" parent="." index="2"]

position = Vector2( 60, 50 )
scale = Vector2( 0.25, 0.2 )
frames = SubResource( 1 )
animation = "full"
_sections_unfolded = [ "Transform" ]

[node name="transparent_background" type="ColorRect" parent="." index="3"]

visible = false
modulate = Color( 0.0677335, 0.04599, 0.0859375, 0.66298 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="game_over" type="Label" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -45.5
margin_bottom = 45.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Game Over"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]


